Added HTML Skeleton

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
-<p>
-Are ya ready kids?
-<br>
-<b><i>I CAN'T HEAR YOU</i></b>
-</p>
-<h1>OOOOOOOOOOOOH </h1>
+<DOCTYPE html>
+<html>
+    <head>
+        <title>Nautical Nonsense</title>
+    </head>
+    <body>
+           <p>
+                Are ya ready kids?
+            <br>
+            <b><i>I CAN'T HEAR YOU</i></b>
+        </p>
+        <h1>OOOOOOOOOOOOH </h1>
+    </body>    
+ 
+</html>
